--- a/KS_Go_MD/4.数据类型.md
+++ b/KS_Go_MD/4.数据类型.md
@@ -27,6 +27,9 @@ complex128  64位浮点类型
 ```
 
 ## 3. ==== String 字符串类型 ====
+### 编码表
+### 字符串连接用`+`加号
+### 转义字符用
 ```go
 package main
 
@@ -52,7 +55,7 @@ func main() {
 	// 字符串连接在一起，称为字符串拼接,使用+号
 	fmt.Println("Hello" + ",Xaiat")
 
-	// 转义字符，实现打印一些特殊符号
+	// 转义字符用 \ 反斜杠开头
 	fmt.Println("Hello\"Xaiat")
 	// \n 是换行符号
 	fmt.Println("Hello\nXaiat")
