--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -1,7 +1,19 @@
 # 5.运算符
 ### 算术运算服
+加减乘除余  
+`%`符号在Go语言中被称为“取模运算符”（Modulus Operator）
 ### 关系运算符
+大于，等于，小于
 ### 逻辑运算符
+与， 或， 非
 ### 位算符
+操作内存地址
 ### 赋值运算符
+=
 ### 其他运算符
+指针， 取内存地址， 取地址内的数值
+
+# 算术运算服 Arith_Ops (Arithmetic Operators)
+
+
+# 关系运算符 Rel_Ops (Relational Operators)
