--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -1,8 +1,8 @@
 # 5.运算符
-### 算术运算服
+### 算术运算服 Arith_Ops (Arithmetic Operators)
 加减乘除余  
 `%`符号在Go语言中被称为“取模运算符”（Modulus Operator）
-### 关系运算符
+### 关系运算符 Rel_Ops (Relational Operators)
 大于，等于，小于
 ### 逻辑运算符
 与， 或， 非
@@ -14,6 +14,42 @@
 指针， 取内存地址， 取地址内的数值
 
 # 算术运算服 Arith_Ops (Arithmetic Operators)
+```
+package main
 
+import "fmt"
+
+func main() {
+	var a int = 10
+	var b int = 3
+	// var c int
+
+	// + - * / % ++ --
+	fmt.Println("a = ", a, "\nb = ", b) // a = 10 b = 3
+	fmt.Println("a + b = ", a+b)        // 10 + 3 = 13
+	fmt.Println("a - b = ", a-b)        // 10 - 3 = 7
+	fmt.Println("a * b = ", a*b)        // 10 * 3 = 30
+	fmt.Println("a % b = ", a%b)        // 10 % 3 = 1
+	a++                                 // a = a + 1
+	fmt.Println("a ++ = ", a)           // 11
+	a = 100                             // a = 100
+	a--                                 // a = a - 1
+	fmt.Println("a -- = ", a)           // 99
+}
+```
 
 # 关系运算符 Rel_Ops (Relational Operators)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
