--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -4,13 +4,13 @@
 `%`符号在Go语言中被称为“取模运算符”（Modulus Operator）
 ### 关系运算符 Rel_Ops (Relational Operators)
 大于，等于，小于
-### 逻辑运算符
+### 逻辑运算符 Log_Ops Logical Operators
 与， 或， 非
-### 位算符
+### 位算符 Bit_Ops Bitwise Operators
 操作内存地址
-### 赋值运算符
+### 赋值运算符 Assign_Ops Assignment Operators
 =
-### 其他运算符
+### 其他运算符 Misc_Ops Miscellaneous Operators
 指针， 取内存地址， 取地址内的数值
 
 # 算术运算服 Arith_Ops (Arithmetic Operators)
@@ -75,15 +75,16 @@ func main() {
 }
 ```
 
+# 逻辑运算符 Log_Ops Logical Operators
 
 
 
+# 位算符 Bit_Ops Bitwise Operators
 
 
 
+# 赋值运算符 Assign_Ops Assignment Operators
 
 
 
-
-
-
+# 其他运算符 Misc_Ops Miscellaneous Operators
