--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -76,6 +76,18 @@ func main() {
 ```
 
 # 逻辑运算符 Log_Ops Logical Operators
+```
+A true B ture
+A true B false
+A false B ture
+A true B false	
+```
+```
+&&	逻辑 AND 运算符，如果两边都为 Ture，则条件 Ture，否则为 False，例 (A && B) 为 False
+||	逻辑 OR 运算符,	如果两边有一个 Ture, 则条件 Ture，否则为 False，例（A || B）为 True
+!	逻辑 NOT 运算符，如果条件为 Ture，则逻辑 NOT 条件 False，否则为 True，例(A && B)为 True
+```
+
 
 
 
