--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -121,7 +121,29 @@ func main() {
 ```
 
 # 位算符 Bit_Ops Bitwise Operators
-
+```
+	二进制里只有 0 和 1，所以只有两种结果，二进制是逢二进一
+	十进制的1，用二进制表示就是1
+	十进制的2，用二进制表示就是10
+	十进制的3，用二进制表示就是11
+	十进制的4，用二进制表示就是100
+	十进制的5，用二进制表示就是101
+	十进制的6，用二进制表示就是110
+	十进制的7，用二进制表示就是111
+	十进制的8，用二进制表示就是1000
+	十进制的9，用二进制表示就是1001
+	十进制的10，用二进制表示就是1010
+	十进制的11，用二进制表示就是1011
+	十进制的12，用二进制表示就是1100
+	十进制的13，用二进制表示就是1101
+	十进制的14，用二进制表示就是1110
+	十进制的15，用二进制表示就是1111
+	十进制的16，用二进制表示就是10000
+	十进制的17，用二进制表示就是10001
+	十进制的18，用二进制表示就是10010
+	十进制的19，用二进制表示就是10011
+	十进制的20，用二进制表示就是10100
+```
 
 
 # 赋值运算符 Assign_Ops Assignment Operators
