--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -5,11 +5,11 @@
 ### 关系运算符 Rel_Ops (Relational Operators)
 大于，等于，小于
 ### 逻辑运算符 Log_Ops Logical Operators
-与， 或， 非
+`&`与， `|`或， `!` 非
 ### 位算符 Bit_Ops Bitwise Operators
 操作内存地址
 ### 赋值运算符 Assign_Ops Assignment Operators
-=
+`=`、`+=`、`-=`、`*=`、`/=`、`%=`、`<<=`、`>>=`、`&=`、`^=`、`|=`
 ### 其他运算符 Misc_Ops Miscellaneous Operators
 指针， 取内存地址， 取地址内的数值
 
@@ -186,7 +186,119 @@ func main() {
 
 
 # 赋值运算符 Assign_Ops Assignment Operators
+`=`、`+=`、`-=`、`*=`、`/=`、`%=`、`<<=`、`>>=`、`&=`、`^=`、`|=`
+`=` 赋值，这是关键核心
 
+```
+package main
+
+import "fmt"
+
+func main() {
+	var a int = 21
+	var b int
+
+	// '='是赋值运算符,将右边的值赋给左边的量
+	b = a // b = 21
+	fmt.Println(b)
+
+	// `+=`是相加后再赋值运算符 b = b + a
+	// 写简化代码的时候,可以使用+=,这样可以减少代码量
+	b += a // b = 42
+	fmt.Println(b)
+
+	// `-=`是相减后再赋值运算符 b = b - a
+	// 写简化代码的时候,可以使用-=,这样可以减少代码量
+	b -= a // b = 21
+	fmt.Println(b)
+
+	// `*=`是相乘后再赋值运算符 b = b * a
+	// 写简化代码的时候,可以使用*=,这样可以减少代码量
+	b *= a // b = 441
+	fmt.Println(b)
+
+	// `/=`是相除后再赋值运算符 b = b / a
+	// 写简化代码的时候,可以使用/=,这样可以减少代码量
+	b /= a // b = 21
+	fmt.Println(b)
+
+	// `%=`是求余后再赋值运算符 b = b % a
+	// 写简化代码的时候,可以使用%=,这样可以减少代码量
+	b %= a // b = 0
+	fmt.Println(b)
+
+	// `<<=`是左移后再赋值运算符 b = b << a
+	// 写简化代码的时候,可以使用<<=,这样可以减少代码量
+	b <<= 2 // b = 0
+	fmt.Println(b)
+
+	// `>>=`是右移后再赋值运算符 b = b >> a
+	// 写简化代码的时候,可以使用>>=,这样可以减少代码量
+	b >>= 2 // b = 0
+	fmt.Println(b)
+
+	// `&=`是按位与后再赋值运算符 b = b & a
+	// 写简化代码的时候,可以使用&=,这样可以减少代码量
+	b &= 2 // b = 0
+	fmt.Println(b)
+
+	// `|=`是按位或后再赋值运算符 b = b | a
+	// 写简化代码的时候,可以使用|=,这样可以减少代码量
+	b |= 2 // b = 2
+	fmt.Println(b)
+
+	// `^=`是按位异或后再赋值运算符 b = b ^ a
+	// 写简化代码的时候,可以使用^=,这样可以减少代码量
+	b ^= 2 // b = 0
+	fmt.Println(b)
+
+	// `&^=`是按位清零后再赋值运算符 b = b &^ a
+	// 写简化代码的时候,可以使用&^=,这样可以减少代码量
+	b &^= 2 // b = 0
+	fmt.Println(b)
+
+	// `:=`是声明并赋值运算符
+	// 写简化代码的时候,可以使用:=,这样可以减少代码量
+	c := 21
+	fmt.Println(c)
+
+	// `++`是自增运算符
+	// 写简化代码的时候,可以使用++,这样可以减少代码量
+	c++
+	fmt.Println(c)
+
+	// `--`是自减运算符
+	// 写简化代码的时候,可以使用--,这样可以减少代码量
+	c--
+	fmt.Println(c)
+
+}
+```
 
 
 # 其他运算符 Misc_Ops Miscellaneous Operators
+指针， 取内存地址， 取地址内的数值
+
+```
+package main
+
+import "fmt"
+
+func main() {
+	var a int = 4
+	var b int32
+	var c float32
+	var ptr *int
+
+	// 运算符实例
+	fmt.Printf("第 1 行 - a 变量类型为 = %T\n", a)
+	fmt.Printf("第 2 行 - b 变量类型为 = %T\n", b)
+	fmt.Printf("第 3 行 - c 变量类型为 = %T\n", c)
+
+	// & 和 * 运算符实例
+	ptr = &a // "ptr" 包含了 "a" 变量的地址
+	fmt.Printf("a 的值为  %d\n", a)
+	fmt.Printf("*ptr 为 %p\n", ptr)
+	fmt.Printf("ptr 为 %d\n", *ptr)
+}
+```
