--- a/KS_Go_MD/7.程序流程控制.md
+++ b/KS_Go_MD/7.程序流程控制.md
@@ -9,8 +9,19 @@
 
 ## 选择结构
 * if
-* switch
+* switch, 也是一种分支语句
 * select, 后面 channel 再讲
 
 ## 循环结构
 * for
+
+# if
+
+
+# switch
+
+## fallthrough 贯穿，直通
+switch 默认情况下匹配成功后就不会执行其他 case，如果我们需要执行后面的 case，可以使用 fallthrough 穿透case。
+使用 fallthrough 会强制执行后面的 case 语句，fallthrough 不会判断下一个 case 的表达式结果是否为 true。
+
+# for
