--- a/KS_Go_MD/7.程序流程控制.md
+++ b/KS_Go_MD/7.程序流程控制.md
@@ -8,20 +8,142 @@
 ## 顺序结构
 
 ## 选择结构
-* if
-* switch, 也是一种分支语句
-* select, 后面 channel 再讲
+* if 条件判断语句，if 和 else 配合，else if 嵌套
+* switch 是流程控制，通过case语句来匹配，也是一种分支语句
+* select 后面 channel 再讲
+
+是流程控制，通过case语句来匹配，也是一种分支语句
 
 ## 循环结构
 * for
 
-# if
+# if 是选择结构的流程控制，也是条件判断语句
+### if 条件判断语句，if 和 else 配合，else if 嵌套
+### if 如果 条件被满足，那么执行 if { 语句块中的代码 }
+### if 如果 条件不被满足，那么执行 else { 语句块中的代码 }
+```go
+package main
 
+import "fmt"
 
-# switch
+// if 如果...否则... else
+func main() {
+
+	var a int = 15
+
+	// if 如果 条件被满足，那么执行 if { 语句块中的代码 }
+	// if 如果 条件不被满足，那么执行 else { 语句块中的代码 }
+	if a > 20 {
+		fmt.Println("a > 20")
+	}
+	if a > 10 {
+		fmt.Println("a > 10")
+	}
+	/*
+		// 分数
+		var score int = 80
+
+		// A 90-100 B 80-89 C 70-79 D 60-69
+		if score >= 90 && score <= 100 {
+			fmt.Println("A")
+		}
+		if score >= 80 && score < 90 {
+			fmt.Println("B")
+		}
+		if score >= 70 && score < 80 {
+			fmt.Println("C")
+		}
+		if score >= 60 && score < 70 {
+			fmt.Println("D")
+		}
+	*/
+	// 分数
+	var score int = 92
+	// A 90-100 B 80-89 C 70-79 D 60-69
+	if score >= 90 && score <= 100 {
+		fmt.Println("A")
+	} else if score >= 80 && score < 90 {
+		fmt.Println("B")
+	} else if score >= 70 && score < 80 {
+		fmt.Println("C")
+	} else if score >= 60 && score < 70 {
+		fmt.Println("D")
+	} else {
+		fmt.Println("不及格")
+	}
+
+}
+```
+## if Nesting 条件判断的多重嵌套
+
+```go
+package main
+
+import "fmt"
+
+// if 嵌套语句
+func main() {
+	/*
+		var a int = 100
+		var b int = 201
+
+		// if 嵌套语句
+		if a == 100 {
+			fmt.Println("a满足条件")
+			if b == 200 {
+				fmt.Println("b满足条件")
+			}
+		}
+	*/
+
+	// 验证密码，再次输入密码，理解为输入两次密码, a是第一次输入，b是第二次输入
+	var a, b int
+	var pwd int = 20240201
+	// 用户输入密码
+	fmt.Println("请输入密码:")
+	fmt.Scan(&a)
+
+	// 业务逻辑：验证密码是否正确
+	if a == pwd {
+		fmt.Println("请再次输入密码:")
+		fmt.Scan(&b)
+		if b == pwd {
+			fmt.Println("登录成功了")
+		} else {
+			fmt.Println("登录失败，第二次密码错误")
+		}
+	} else {
+		fmt.Println("登录失败，密码错误")
+	}
+
+}
+```
+```
+这段代码是一个简单的密码验证程序。它首先定义了两个整数变量 a 和 b，以及一个预设的密码 pwd。
+
+程序首先提示用户输入密码，并使用 fmt.Scan(&a) 从键盘读取用户输入的密码。fmt.Scan 函数会阻塞程序，等待用户输入。用户输入的值会被赋值给变量 a。
+
+然后，程序会检查用户输入的密码 a 是否与预设的密码 pwd 相等。如果相等，程序会再次提示用户输入密码，并使用 fmt.Scan(&b) 从键盘读取用户输入的密码。这次输入的密码会被赋值给变量 b。
+
+接着，程序会检查用户第二次输入的密码 b 是否与预设的密码 pwd 相等。如果相等，程序会打印出 "登录成功了"。如果不相等，程序会打印出 "登录失败，第二次密码错误"。
+
+如果用户第一次输入的密码 a 与预设的密码 pwd 不相等，程序会直接打印出 "登录失败，密码错误"。
+
+这段代码展示了如何使用 if 语句进行条件判断，以及如何使用 fmt.Scan 函数从键盘读取用户输入。
+```
+
+# switch 是选择结构的流程控制，通过case语句来匹配
+### switch 是流程控制，通过case语句来匹配，也是一种分支语句
 
 ## fallthrough 贯穿，直通
 switch 默认情况下匹配成功后就不会执行其他 case，如果我们需要执行后面的 case，可以使用 fallthrough 穿透case。
 使用 fallthrough 会强制执行后面的 case 语句，fallthrough 不会判断下一个 case 的表达式结果是否为 true。
 
-# for
+## break 如果想结束 fallthrough 穿透，用 break 终止
+
+# for 是循环结构的流程控制，
+
+
+
+
+
