--- a/KS_Go_MD/7.程序流程控制.md
+++ b/KS_Go_MD/7.程序流程控制.md
@@ -16,6 +16,7 @@
 
 ## 循环结构
 * for
+* for 循环中常用的两个退出循环方法：break和continue
 
 # if 是选择结构的流程控制，也是条件判断语句
 ### if 条件判断语句，if 和 else 配合，else if 嵌套
@@ -303,5 +304,38 @@ func main() {
 		}
 		fmt.Println()
 	}
+}
+```
+## for 循环中常用的两个退出循环方法：break和continue
+### for循环中常用的两个退出循环方法：break和continue
+### break：彻底的退出循环，不再执行循环体中的代码
+### continue：退出本次循环，继续执行下一次循环
+```go
+package main
+
+import "fmt"
+
+func main() {
+
+	// for循环中常用的两个退出循环方法：break和continue
+	// break：彻底的退出循环，不再执行循环体中的代码
+	for i := 0; i <= 10; i++ {
+		if i == 5 {
+			break
+		}
+		fmt.Println(i)
+	}
+
+	fmt.Println("=============================")
+
+	// for循环中常用的两个退出循环方法：break和continue
+	// continue：退出本次循环，继续执行下一次循环
+	for i := 0; i <= 10; i++ {
+		if i == 5 {
+			continue
+		}
+		fmt.Println(i)
+	}
+
 }
 ```
