--- a/KS_Go_MD/7.程序流程控制.md
+++ b/KS_Go_MD/7.程序流程控制.md
@@ -4,8 +4,11 @@
 ### 顺序结构：从上到下，逐行执行，也是默认的逻辑。
 ### 选择结构：条件满足某些代码后才会执行
 ### 循环结构：条件满足某些代码后会被反复执行0-N次
+### 遍历String
+
 
 ## 顺序结构
+### 默认结构
 
 ## 选择结构
 * if 条件判断语句，if 和 else 配合，else if 嵌套
@@ -339,3 +342,8 @@ func main() {
 
 }
 ```
+
+# 遍历String FlowCtrl_Iterate_String
+
+
+
