--- a/KS_Go_MD/5.运算符.md
+++ b/KS_Go_MD/5.运算符.md
@@ -4,16 +4,16 @@
 `%`符号在Go语言中被称为“取模运算符”（Modulus Operator）
 ### 关系运算符 Rel_Ops (Relational Operators)
 大于，等于，小于
-### 逻辑运算符 Log_Ops Logical Operators
+### 逻辑运算符 Log_Ops (Logical Operators)
 `&`与， `|`或， `!` 非
-### 位算符 Bit_Ops Bitwise Operators
+### 位算符 Bit_Ops (Bitwise Operators)
 操作内存地址
-### 赋值运算符 Assign_Ops Assignment Operators
+### 赋值运算符 Assign_Ops (Assignment Operators)
 `=`、`+=`、`-=`、`*=`、`/=`、`%=`、`<<=`、`>>=`、`&=`、`^=`、`|=`
-### 其他运算符 Misc_Ops Miscellaneous Operators
+### 其他运算符 Misc_Ops (Miscellaneous Operators)
 指针， 取内存地址， 取地址内的数值
 
-### 键盘输入输出 Keyboard_IO Keyboard Input Output
+### 键盘输入输出 Keyboard_IO (Keyboard Input Output)
 
 # 算术运算服 Arith_Ops (Arithmetic Operators)
 ```go
@@ -77,7 +77,7 @@ func main() {
 }
 ```
 
-# 逻辑运算符 Log_Ops Logical Operators
+# 逻辑运算符 Log_Ops (Logical Operators)
 ```
 A true B ture
 A true B false
@@ -122,7 +122,7 @@ func main() {
 }
 ```
 
-# 位算符 Bit_Ops Bitwise Operators
+# 位算符 Bit_Ops (Bitwise Operators)
 ```go
 package main
 
@@ -187,7 +187,7 @@ func main() {
 ```
 
 
-# 赋值运算符 Assign_Ops Assignment Operators
+# 赋值运算符 Assign_Ops (Assignment Operators)
 `=`、`+=`、`-=`、`*=`、`/=`、`%=`、`<<=`、`>>=`、`&=`、`^=`、`|=`
 `=` 赋值，这是关键核心
 
@@ -278,7 +278,7 @@ func main() {
 ```
 
 
-# 其他运算符 Misc_Ops Miscellaneous Operators
+# 其他运算符 Misc_Ops (Miscellaneous Operators)
 指针， 取内存地址， 取地址内的数值
 
 ```go
@@ -305,7 +305,7 @@ func main() {
 }
 ```
 
-# 键盘输入输出 Keyboard_IO Keyboard Input Output
+# 键盘输入输出 Keyboard_IO (Keyboard Input Output)
 ```go
 /* ====1、从键盘输入一个整数，然后打印出来====
 package main
