--- a/KS_Go_MD/8.Function.md
+++ b/KS_Go_MD/8.Function.md
@@ -4,7 +4,7 @@
 ### 可以通过函数来划分不同功能，逻辑上每个函数执行的是制定的任务。
 ### 函数声明告诉了编译器函3件事：1.函数的名称；2.参数；3.返回类型。
 
-# 函数的声明
+# 函数的声明 Func_Decl (Function Declaration)
 ### Go语言函数定义格式如下：
 ```go
 func function_name( [parameter list] ) [ return_type ] {
