--- a/KS_Go_MD/8.Function.md
+++ b/KS_Go_MD/8.Function.md
@@ -3,6 +3,10 @@
 ### Go语言最少有个 main() 函数。
 ### 可以通过函数来划分不同功能，逻辑上每个函数执行的是制定的任务。
 ### 函数声明告诉了编译器函3件事：1.函数的名称；2.参数；3.返回类型。
+## 函数的声明 Func_Decl (Function Declaration)
+## 函数的调用
+## 形式参数和实际参数
+
 
 # 函数的声明 Func_Decl (Function Declaration)
 ### Go语言函数定义格式如下：
@@ -20,26 +24,63 @@ func function_name( [parameter list] ) [ return_type ] {
 
 
 # 无参数，无返回值，的函数
-
+// 无参数，无返回值，的函数
+func printinfo() {
+	fmt.Println("printinfo")
+}
 
 
 # 有1个参数，的函数
-
+// 有1个参数，的函数
+func myprint(msg string) {
+	fmt.Println(msg)
+}
 
 
 # 有2个参数，的函数
-
+// 有2个参数，的函数
+// 有1个返回值，的函数
+func add(a int, b int) int {
+	c := a + b
+	return c
+}
 
 
 # 有1个返回值，的函数
-
+// 有2个参数，的函数
+// 有1个返回值，的函数
+func add(a int, b int) int {
+	c := a + b
+	return c
+}
 
 
 # 有多个返回值，的函数
+// 有多个返回值，的函数
+func swap(x, string, y string) (string, string) {
+	return y, x
+}
 
+# 函数的调用
+```go
+	// 调用无参数，无返回值，的函数
+	printinfo()
 
+	// 调用有参数的函数，我们就需要按接收函数的参数类型来传递
+	myprint("Xaiat.com")
 
+	// 调用有返回值的函数，我们就需要按接收函数的返回值类型来接收
+	c := add(1, 2)
+	myprintnum(c)
 
+	// 调用有多个返回值的函数
+	x, y := swap("Xaiat", ".com")
+	fmt.Println(x, y)
+
+}
+```
+
+# 形式参数和实际参数
 
 
 
