--- a/KS_Go_MD/8.Function.md
+++ b/KS_Go_MD/8.Function.md
@@ -80,7 +80,9 @@ func swap(x, string, y string) (string, string) {
 }
 ```
 
-# 形式参数和实际参数
+# 形式参数和实际参数 Parameter_Argment
+### 形参：Parameter，函数声明中用来占位的参数名，“参数占位符”更容易理解。
+### 实参：Argument，函数调用时候真实传入的参数。
 
 
 
