--- a/KS_Go_MD/8.Function.md
+++ b/KS_Go_MD/8.Function.md
@@ -57,7 +57,7 @@ func add(a int, b int) int {
 
 # 有多个返回值，的函数
 // 有多个返回值，的函数
-func swap(x, string, y string) (string, string) {
+func swap(x string, y string) (string, string) {
 	return y, x
 }
 
