--- a/KS_Go_MD/8.Function.md
+++ b/KS_Go_MD/8.Function.md
@@ -6,6 +6,7 @@
 ## 函数的声明 Func_Decl (Function Declaration)
 ## 函数的调用
 ## 形式参数和实际参数
+## 可变参数 Variadic Parameter
 
 
 # 函数的声明 Func_Decl (Function Declaration)
@@ -84,7 +85,7 @@ func swap(x string, y string) (string, string) {
 ### 形参：Parameter，函数声明中用来占位的参数名，“参数占位符”更容易理解。
 ### 实参：Argument，函数调用时候真实传入的参数。
 
-
+# 可变参数 Variadic Parameter
 
 
 
