--- a/KS_Go_MD/8.Function.md
+++ b/KS_Go_MD/8.Function.md
@@ -85,7 +85,7 @@ func swap(x string, y string) (string, string) {
 ### 形参：Parameter，函数声明中用来占位的参数名，“参数占位符”更容易理解。
 ### 实参：Argument，函数调用时候真实传入的参数。
 
-# 可变参数 varargs (Variadic Parameter)
+# 可变参数 Varargs (Variadic Parameter)
 
 
 
