--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -86,7 +86,7 @@ func swap(x string, y string) (string, string) {
 ### 实参：Argument，函数调用时候真实传入的参数。
 
 # 可变参数 Varargs (Variadic Parameter)
-
+### 一个函数的参数类型确定，但是数量不确定，就可以使用可变参数
 
 
 
