--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -87,7 +87,8 @@ func swap(x string, y string) (string, string) {
 
 # 可变参数 Varargs (Variadic Parameter)
 ### 一个函数的参数类型确定，但是数量不确定，就可以使用可变参数
-
+### 如果一个函数的参数是可变参数，同时还有其他的参数，可变参数要放在列表的最后
+### 一个函数的参数列表中最多只能有一个可变参数
 
 
 
