--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -3,6 +3,7 @@
 ### Go语言最少有个 main() 函数。
 ### 可以通过函数来划分不同功能，逻辑上每个函数执行的是制定的任务。
 ### 函数声明告诉了编译器函3件事：1.函数的名称；2.参数；3.返回类型。
+
 ## 函数的声明 Func_Decl (Function Declaration)
 ## 函数的调用
 ## 形式参数和实际参数
@@ -89,7 +90,30 @@ func swap(x string, y string) (string, string) {
 ### 一个函数的参数类型确定，但是数量不确定，就可以使用可变参数
 ### 如果一个函数的参数是可变参数，同时还有其他的参数，可变参数要放在列表的最后
 ### 一个函数的参数列表中最多只能有一个可变参数
+```go
+package main
 
+import "fmt"
+
+// arg ...int 告诉 Go 这个函数接收不定数量的参数，类型全部是 int
+func main() {
+	// 调用函数时，可以传递任意数量的参数
+	getSum("Xaiat", 1, 2, 3, 4, 5, 6, 7, 8, 100)
+}
+
+func getSum(msg string, nums ...int) {
+	sum := 0
+
+	for i := 0; i < len(nums); i++ {
+		fmt.Println(nums[i])
+		// sum = sum + nums[i], sum += nums[i] 是一样的
+		sum += nums[i]
+	}
+	fmt.Println("msg:", msg)
+	fmt.Println("sum:", sum)
+
+}
+```
 
 
 
