--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -6,9 +6,9 @@
 
 ## 函数的声明 Func_Decl (Function Declaration)
 ## 函数的调用
-## 形式参数和实际参数
-## 可变参数 Variadic Parameter
-
+## 形式参数和实际参数 Func_Parameter_Argment
+## 可变参数 Func_Varargs (Variadic Parameter)
+## 参数传递 Func_Varargs (Variable number of Arguments)
 
 # 函数的声明 Func_Decl (Function Declaration)
 ### Go语言函数定义格式如下：
@@ -86,7 +86,7 @@ func swap(x string, y string) (string, string) {
 ### 形参：Parameter，函数声明中用来占位的参数名，“参数占位符”更容易理解。
 ### 实参：Argument，函数调用时候真实传入的参数。
 
-# 可变参数 Varargs (Variadic Parameter)
+# 可变参数 Func_Varargs (Variadic Parameter)
 ### 一个函数的参数类型确定，但是数量不确定，就可以使用可变参数
 ### 如果一个函数的参数是可变参数，同时还有其他的参数，可变参数要放在列表的最后
 ### 一个函数的参数列表中最多只能有一个可变参数
@@ -115,5 +115,7 @@ func getSum(msg string, nums ...int) {
 }
 ```
 
-
-
+# 参数传递 Func_Varargs (Variable number of Arguments)
+### 按照数据的存储特点来划分：
+### 数值的数据：操作的数据本身、int、string、bool、float64、array...
+### 引用类型的数据：操作的是数据的地址 slice(切片)、map()、chan(通道)...
