--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -116,6 +116,6 @@ func getSum(msg string, nums ...int) {
 ```
 
 # 参数传递 Func_Varargs (Variable number of Arguments)
-### 按照数据的存储特点来划分：
-### 数值的数据：操作的数据本身、int、string、bool、float64、array...
+### 按照数据的存储特点来划分：参数传递可以分为“值专递”和“引用传递”
+### 值类型的数据：操作的数据本身、int、string、bool、float64、array...
 ### 引用类型的数据：操作的是数据的地址 slice(切片)、map()、chan(通道)...
