--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -8,7 +8,9 @@
 ## 函数的调用
 ## 形式参数和实际参数 Func_Parameter_Argment
 ## 可变参数 Func_Varargs (Variadic Parameter)
-## 参数传递 Func_Varargs (Variable number of Arguments)
+## 参数传递 Func_Param_Pass (Parameter Passing)
+## 值传递 Func_Varargs_Value_Pass (Variable number of Arguments Value Passing)
+## 引用传递 Func_Varargs_Ref_Pass (Reference Passing)
 
 # 函数的声明 Func_Decl (Function Declaration)
 ### Go语言函数定义格式如下：
@@ -115,12 +117,12 @@ func getSum(msg string, nums ...int) {
 }
 ```
 
-# 参数传递 Func_Varargs (Variable number of Arguments)
+# 参数传递 Func_Varargs (Parameter Passing)
 ### 按照数据的存储特点来划分：参数传递可以分为“值专递”和“引用传递”
 ### 值类型的数据：操作的数据本身、int、string、bool、float64、array...
 ### 引用类型的数据：操作的是数据的地址 slice(切片)、map(集合)、chan(通道)...
 
-## 值传递 Value_Pass (Value Passing)
+# 值传递 Func_Varargs_Value_Pass (Variable number of Arguments Value Passing)
 ```go
 package main
 
@@ -150,6 +152,10 @@ func update(arr2 [4]int) {
 }
 ```
 
+# 引用传递 Func_Varargs_Ref_Pass (Reference Passing)
 
 
-## 引用传递 Ref_Pass (Reference Passing)
+
+
+
+
