--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -4,10 +4,10 @@
 ### 可以通过函数来划分不同功能，逻辑上每个函数执行的是制定的任务。
 ### 函数声明告诉了编译器函3件事：1.函数的名称；2.参数；3.返回类型。
 
-## 函数的声明 Func_Decl (Function Declaration)
+## 32函数的声明 Func_Decl (Function Declaration)
 ## 函数的调用
-## 形式参数和实际参数 Func_Parameter_Argment
-## 可变参数 Func_Varargs (Variadic Parameter)
+## 33形式参数和实际参数 Func_Parameter_Argment
+## 34可变参数 Func_Varargs (Variadic Parameter)
 ## 参数传递 Func_Param_Pass (Parameter Passing)
 ## 值传递 Func_Varargs_Value_Pass (Variable number of Arguments Value Passing)
 ## 引用传递 Func_Varargs_Ref_Pass (Reference Passing)
