--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -198,6 +198,11 @@ func update2(s2 []int) {
 ```
 
 # 函数变量的作用域 Func_Var_Scope (Function Variables Scope)
+### 作用域：变量可以使用的范围
+## 变量分为：局部变量 和 全局变量
+### 局部变量：函数内部定于的变量，叫做局部变量，只能在函数内部使用
+### 全局变量：
+
 
 
 
