--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -12,7 +12,7 @@
 ## 值传递 Func_Varargs_Value_Pass (Variable number of Arguments Value Passing)
 ## 引用传递 Func_Varargs_Ref_Pass (Reference Passing)
 ## 函数变量的作用域 Func_Var_Scope (Function Variables Scope)
-
+## 递归函数 Func_Recur (Function Recursive)
 
 
 
@@ -201,9 +201,11 @@ func update2(s2 []int) {
 ### 作用域：变量可以使用的范围
 ## 变量分为：局部变量 和 全局变量
 ### 局部变量：函数内部定于的变量，叫做局部变量，只能在函数内部使用
-### 全局变量：
+### 全局变量：函数外部定于的变量，叫做全局变量，可以在函数内部和外部使用
 
-
+# 递归函数 Func_Recur (Function Recursive)
+### 定义：一个函数自己调用自己，就叫做递归函数
+### 注意：递归函数需要有一个出口，逐渐向出口靠近，没有出口就会形成死循环
 
 
 
