--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -202,11 +202,70 @@ func update2(s2 []int) {
 ## 变量分为：局部变量 和 全局变量
 ### 局部变量：函数内部定于的变量，叫做局部变量，只能在函数内部使用
 ### 全局变量：函数外部定于的变量，叫做全局变量，可以在函数内部和外部使用
+```go
+package main
+
+import "fmt"
+
+// 全局变量
+// 定义变量的时候，要思考这个变量是在哪里使用，如果是全局变量，就定义在函数外部；如果是局部变量，就定义在函数内部
+var num int = 100
+
+func main() {
+	/*
+		// 函数体内的局部变量
+		temp := 100
+
+		// if语句、for语句定义的一次性变量都是局部变量，只能在语句内使用
+		if b := 1; b <= 10 {
+			// 语句内的局部变量
+			temp := 50
+			fmt.Println(temp) // 50，局部变量，遵循就近原则
+			fmt.Println(b)    // 1
+		}
+		fmt.Println(temp) // 100
+	*/
+
+	num := 20
+	// 无论是全局变量还是局部变量，都是找最近的变量去打印
+	fmt.Println(num) // 20
+
+	f1()
+	f2()
+	f3()
+}
+
+func f1() {
+	num := 30
+	// 无论是全局变量还是局部变量，都是找最近的变量去打印
+	fmt.Println(num) // 30
+}
+
+func f2() {
+	num := 40
+	// fmt.Println(a) // 不能使用其他函数中定义的变量
+	// 无论是全局变量还是局部变量，都是找最近的变量去打印
+	fmt.Println(num) // 40
+}
+
+func f3() {
+	// 无论是全局变量还是局部变量，都是找最近的变量去打印
+	fmt.Println(num) // 100
+}
+```
 
 # 递归函数 Func_Recur (Function Recursive)
 ### 定义：一个函数自己调用自己，就叫做递归函数
 ### 注意：递归函数需要有一个出口，逐渐向出口靠近，没有出口就会形成死循环
-
+```
+// 想要做一个求和：1，2，3，4，5
+// getsum(5)
+//   getsum(4)+5
+//	   getsum(3)+4
+//       getsum(2)+3
+//		   getsum(1)+1
+//			 1
+```
 
 
 
