--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -13,7 +13,7 @@
 ## 引用传递 Func_Varargs_Ref_Pass (Reference Passing)
 ## 函数变量的作用域 Func_Var_Scope (Function Variables Scope)
 ## 递归函数 Func_Recur (Function Recursive)
-
+## Defer延迟函数执行 Func_Defer (Function Defer)
 
 
 # 函数的声明 Func_Decl (Function Declaration)
@@ -266,6 +266,15 @@ func f3() {
 //		   getsum(1)+1
 //			 1
 ```
+
+# Defer延迟函数执行 Func_Defer (Function Defer)
+### Defer语义：推迟、延迟
+### 在Go语言中，使用Defer关键字来延迟一个函数活着方法的执行。
+
+
+
+
+
 
 
 
