--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -315,13 +315,30 @@ func getSum(n int) int {
 # Defer延迟函数执行 Func_Defer (Function Defer)
 ### Defer语义：推迟、延迟
 ### 在Go语言中，使用Defer关键字来延迟一个函数活着方法的执行。
+```go
+package main
+
+import "fmt"
+
+func main() {
+	f("1")
+	fmt.Println("2")
+	// 会被延迟到最后执行
+	defer f("3")
+	fmt.Println("4")
+}
+
+func f(s string) {
+	fmt.Println(s)
+}
+
+```
 
 
 
-
-
-
-
+### Defer函数或者方法：一个函数或方法的执行被延迟了
+### 你可以在函数中添加多个defer语句，当函数执行到最后是，这些defer语句会按照逆序执行，最后该函数返回，特别是当你在进行一些打开资源的操作时，遇到错误需要提前返回，在返回前你需要关闭相应的资源，不然很容易造成资源泄露等问题
+### 如果有很多调用defer，那么defer是采用后进先出模式，这与“栈”类似。
 
 
 
