--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -4,16 +4,21 @@
 ### 可以通过函数来划分不同功能，逻辑上每个函数执行的是制定的任务。
 ### 函数声明告诉了编译器函3件事：1.函数的名称；2.参数；3.返回类型。
 
-## 32函数的声明 Func_Decl (Function Declaration)
+## 函数的声明 Func_Decl (Function Declaration)
 ## 函数的调用
-## 33形式参数和实际参数 Func_Parameter_Argment
-## 34可变参数 Func_Varargs (Variadic Parameter)
+## 形式参数和实际参数 Func_Parameter_Argment
+## 可变参数 Func_Varargs (Variadic Parameter)
 ## 参数传递 Func_Param_Pass (Parameter Passing)
 ## 值传递 Func_Varargs_Value_Pass (Variable number of Arguments Value Passing)
 ## 引用传递 Func_Varargs_Ref_Pass (Reference Passing)
 ## 函数变量的作用域 Func_Var_Scope (Function Variables Scope)
 ## 递归函数 Func_Recur (Function Recursive)
 ## Defer延迟函数执行 Func_Defer (Function Defer)
+## 函数本质的探讨
+## 匿名函数推导
+## 函数式编程
+## 闭包结构的理解
+
 
 
 # 函数的声明 Func_Decl (Function Declaration)
@@ -315,6 +320,36 @@ func getSum(n int) int {
 # Defer延迟函数执行 Func_Defer (Function Defer)
 ### Defer语义：推迟、延迟
 ### 在Go语言中，使用Defer关键字来延迟一个函数活着方法的执行。
+### Defer函数或者方法：一个函数或方法的执行被延迟了
+### 你可以在函数中添加多个defer语句，当函数执行到最后是，这些defer语句会按照逆序执行，最后该函数返回，特别是当你在进行一些打开资源的操作时，遇到错误需要提前返回，在返回前你需要关闭相应的资源，不然很容易造成资源泄露等问题
+### 如果有很多调用defer，那么defer是采用后进先出模式，这与“栈”类似。
+## 提问：defer为什么可以用来做关闭操作？
+### 回答：defer 是 Go 语言提供的一种用于注册延迟调用的机制，这些调用直到 return 前才被执行，通常用于释放资源、清理收尾工作。当你在打开文件或获取数据库连接后，可以立即使用 defer 来注册关闭操作，这样无论函数执行路径如何，只要函数返回，这些资源就能被正确释放。
+## 例如，你可能会这样操作文件：
+```go
+file, err := os.Open("file.go")
+if err != nil {
+    // handle error
+}
+defer file.Close()
+
+// do something with the file
+```
+### 在这个例子中，无论 "do something with the file" 的代码如何执行（即使出现了 panic），defer file.Close() 保证了 file.Close() 会在函数结束时被调用，文件资源会被正确释放。
+### 同样的，你可以在获取数据库连接后，使用 defer 来确保数据库连接在函数结束时关闭：
+```go
+conn, err := db.Connect()
+if err != nil {
+    // handle error
+}
+defer conn.Close()
+
+// do something with the connection
+```
+### 这就是为什么 defer 可以用来做关闭操作的原因。
+
+
+
 ```go
 package main
 
@@ -326,19 +361,23 @@ func main() {
 	// 会被延迟到最后执行
 	defer f("3")
 	fmt.Println("4")
+	// 会被延迟到最后执行
+	defer f("5")
+	fmt.Println("6")
+	// 会被延迟到最后执行
+	defer f("7")
+	fmt.Println("8")
+	f("9")
+	f("10")
 }
 
 func f(s string) {
 	fmt.Println(s)
 }
-
 ```
 
 
 
-### Defer函数或者方法：一个函数或方法的执行被延迟了
-### 你可以在函数中添加多个defer语句，当函数执行到最后是，这些defer语句会按照逆序执行，最后该函数返回，特别是当你在进行一些打开资源的操作时，遇到错误需要提前返回，在返回前你需要关闭相应的资源，不然很容易造成资源泄露等问题
-### 如果有很多调用defer，那么defer是采用后进先出模式，这与“栈”类似。
 
 
 
