--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -376,7 +376,7 @@ func f(s string) {
 }
 ```
 
-# 函数本质的探讨
+# 函数本质的探讨 Func_Essence (Function Essence)
 ## 函数的数据类型
 ## 函数的本质
 ```go
@@ -384,7 +384,9 @@ package main
 
 import "fmt"
 
-// func() 函数本身也是一个数据类型，可以赋值给变量，也可以作为函数的参数和返回值。
+// 在 Go 语言中，函数是复合类型，可以看作是一种特殊的变量。
+// 函数指向的是一段内存地址，一种的树类型的指针变量。
+// func() 函数本身也是一个数据类型，也是一个变量，可以赋值给变量，也可以作为函数的参数和返回值。
 func main() {
 
 	// f1 如果不加()括号，函数就是一个变量
@@ -395,6 +397,7 @@ func main() {
 
 	// 定义函数类型的变量
 	var f5 func(int, int)
+	// 函数本身是引用类型的传递，所以可以赋值给变量
 	f5 = f1
 	fmt.Println(f5) // 0x10b0b60
 	fmt.Println(f1) // 0x10b0b60
@@ -414,18 +417,19 @@ func f1(a, b int) {
 }
 ```
 
-## 匿名函数
+# 匿名函数推导 Anon_Func (Anonymous Functions)
+## 匿名函数 Anon_Func (Anonymous Functions)
+
+
 
 
 ## 回调函数
 
 
+
+
+
 ## 闭包
-
-
-
-
-# 匿名函数推导
 
 
 
