--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -15,7 +15,7 @@
 ## 递归函数 Func_Recur (Function Recursive)
 ## Defer延迟函数执行 Func_Defer (Function Defer)
 ## 函数本质的探讨 Func_Essence (Function Essence)
-## 匿名函数推导 
+## 匿名函数推导  Anon_Func (Anonymous Functions)
 ## 函数式编程
 ## 闭包结构的理解
 
@@ -471,8 +471,12 @@ Go语言是支持函数式编程：
 */
 ```
 
-## 回调函数
-
+## 回调函数 Callback_Func (Callback Functions)
+### 根据Go语言的数据类型的特点，可以将一个函数作为另一个函数的参数。
+### fun1(), fun2()
+### 将fun1函数作为fun2这个函数的参数
+### fun2函数：就叫做高阶函数，接受了一个函数作为参数
+### fun1函数：就叫做回调函数，作为另一个函数（fun2）的参数
 
 
 
