--- a/KS_Go_MD/8.Function-函数.md
+++ b/KS_Go_MD/8.Function-函数.md
@@ -539,7 +539,8 @@ func div(a, b int) int {
 ```
 
 # 闭包 Closure
-### 一个外层函数中，有内层函数，该内层函数中，会操作外层函数的局部变量并且该外层函数的返回值就是这个内层函数；
+### 一个外层函数中，有内层函数，该内层函数中，会操作外层函数的局部变量；
+### 并且该外层函数的返回值就是这个内层函数；
 ### 这个内层函数和外层函数的局部变量，统称为闭包结构。
 ### 局部变量的生命周期就会发生改变，正常的局部变量会随着函数的调用而创建，随着函数的结束而销毁；
 ### 但是比变结构中的外层函数的局部变量并不会随着外层函数的结束而销毁，因为内层函数还在继续使用。
